<resources>
    <string name="app_name">聊吧</string>
    <string name="home">大厅</string>
    <string name="title_home_left">踩雷红包</string>
    <string name="title_home_right">接龙红包</string>
    <string name="title_qr_code">二维码</string>
    <string name="title_group_member">聊天信息(%1$s)</string>
    <string name="message">消息</string>
    <string name="service">服务</string>
    <string name="person">我</string>
    <string name="phone_login">手机号登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="please_input_phone_hint">请输入手机号</string>
    <string name="please_input_pw_hint">请输入密码</string>
    <string name="please_input_new_pw_hint">请输入新密码</string>
    <string name="please_input_confirm_pw_hint">请再次输入密码</string>
    <string name="please_input_confirm_new_pw_hint">请再次输入新密码</string>
    <string name="please_input_nick_hint">请输入昵称</string>
    <string name="please_input_sms_code_hint">请输入验证码</string>
    <string name="register_account">注册账号</string>
    <string name="forget_pw">忘记密码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="second_tip">%1$sS</string>
    <string name="person_nick_default">红包口令</string>
    <string name="person_account_show">账号： %1$s</string>
    <string name="person_my_package">钱包</string>
    <string name="recharge">充值</string>
    <string name="cash_withdrawal">提现</string>
    <string name="person_my_get">我的收益</string>
    <string name="person_red_package_record">红包记录</string>
    <string name="person_to_get_cash">推广二维码赚钱</string>
    <string name="person_setting">设置</string>
    <string name="person_about_us">关于我们</string>
    <string name="person_call">投诉举报</string>
    <string name="title_person_info">个人信息</string>
    <string name="my_nick">我的昵称</string>
    <string name="photo">头像</string>
    <string name="logout">退出登陆</string>
    <string name="group_name_default">福利群</string>
    <string name="group_des_default">10个包(赔率1.0)</string>
    <string name="red_package_detail">红包明细</string>
    <string name="money_tip">金额</string>
    <string name="my_get_today_tip">今日收益x元</string>
    <string name="my_get_month_tip">月总收益x元</string>
    <string name="about_tip">聊吧APP是一款清量级的用户聊天工具， 聊聊，为交友而生！一款随时可以提现 的用户聊天工具，充值或者提现，随你所想！聊吧APP24小时都在下红包雨~ 快来抢红包吧！</string>
    <string name="title_jl_introduce">接龙玩法说明</string>
    <string name="title_cl_introduce">踩雷玩法说明</string>
    <string name="wf_introduce">玩法说明</string>
    <string name="jl_introduce_tip">1.系统创建房间时设置包数，金额，惩罚。\n2.玩家可以自由发包，自由抢包，自由发挥。\n3.抢包结束后惩罚最小或最大金额玩家，绝对公平公正。\n4.惩罚金额等同于玩家的发包金额。\n5.未被惩罚的玩家抢到金币直接加入个人于额。\n6.玩家金额需要大于等于红包金额，否则无法抢包。\n7.红包人数若不够，一分钟之后红包失效，剩余金额返还。\n8.红包人数若不够，一分钟之后红包失效，剩余金额返还。\n9.大豹子、大顺子按发包金额40%奖励，小豹子、小顺子按发包金额30%奖励。</string>
    <string name="cl_introduce_tip">1.发红包：20-500，中雷自动返。（多雷奖励截图客服兑奖，三雷奖励10四雷奖励30，五雷奖励80，六雷奖励200）\n2.抢红包：抢包金额须大于发包金额1.6倍（抢到顺子、豹子、001奖励发包金额的30%福利自动返）</string>
    <string name="wf_introduce_tip">平台对每个玩家绝对公平公正，资金安全，绝对信誉</string>
    <string name="app_sign_tip">——聊吧</string>
    <string name="please_input_name_hint">请输入您的姓名</string>
    <string name="please_input_nick_name_hint">请输入昵称</string>
    <string name="please_input_your_phone_hint">请留下您的手机号码，以便我们联系您</string>
    <string name="please_input_introduce_hint">请留下您的宝贝意见，我们将努力改进</string>
    <string name="bind_account">绑定账户</string>
    <string name="modify_pw">修改密码</string>
    <string name="version_check">版本检测</string>
    <string name="app_version_tip">当前版本：v%1$s</string>
    <string name="sound">声音</string>
    <string name="bind_alipay">绑定支付宝</string>
    <string name="bind_bank_card">绑定银行卡</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="account_confirm">确认账号</string>
    <string name="real_name">真实姓名</string>
    <string name="please_input_alipay_account_hint">请输入支付宝账号</string>
    <string name="please_input_alipay_account_confirm_hint">请再次输入支付宝账号</string>
    <string name="please_input_real_name_hint">请输入真实姓名</string>
    <string name="bind_alipay_tip">提示：请正确输入支付宝账号，提现时将直接转入此支付宝账号</string>
    <string name="bank">银行</string>
    <string name="card_no">卡号</string>
    <string name="card_no_confim">再次输入卡号</string>
    <string name="bank_card_name">姓名</string>
    <string name="certify_card_no">身份证号码</string>
    <string name="please_input_bank_name_hint">请输入银行名称</string>
    <string name="please_input_bank_card_no_hint">请输入银行卡号</string>
    <string name="please_input_card_name_hint">请输入姓名</string>
    <string name="please_input_certify_crad_no_hint">请输入身份证号码</string>
    <string name="please_input_old_pw_hint">请输入原密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="recharge_12_type">充值12点换码充值</string>
    <string name="cash_ye_type">提现直接转余额出码</string>
    <string name="system_notify">系统通知</string>
    <string name="platform_notify">平台公告</string>
    <string name="jl_introduce">接龙玩法说明</string>
    <string name="cl_introduce">踩雷玩法说明</string>
    <string name="yuan">元</string>
    <string name="hint_red_package_amount_input">请输入金额范围（元）：%1$s~%2$s</string>
    <string name="hint_red_package_set_ws">请设置踩雷尾数</string>
    <string name="bt_send_red_package">塞钱进红包</string>
    <string name="red_package_amount_default">0.00</string>
    <string name="title_send_red_package">发红包</string>
    <string name="red_package">红包</string>
    <string name="who_red_package">%1$s的红包</string>
    <string name="open_red_package_tip">看看大家的手气 ></string>
    <string name="open_red_package_detail_tip">已领取%1$s/%2$s个, 共%3$s/%4$s元</string>
    <string name="title_modify_nick_name">昵称修改</string>
    <string name="title_modify_photo">头像修改</string>
    <string name="gfkf">官方客服</string>
</resources>
