<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              tools:context="com.project.hc.imtest.activity.LoginActivity">

    <ImageView
            android:id="@+id/iv_login_cancel"
            android:layout_width="@dimen/public_space_value_45"
            android:layout_height="@dimen/public_space_value_45"
            android:padding="@dimen/public_space_value_15"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_cancel"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/public_space_value_25"
            android:layout_marginRight="@dimen/public_space_value_25"
            android:layout_marginTop="@dimen/public_space_value_100"
            android:textSize="@dimen/xlarge_text_size"
            android:text="@string/phone_login"
            android:textColor="@color/text_default"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/public_space_value_50"
            android:layout_marginLeft="@dimen/public_space_value_25"
            android:layout_marginRight="@dimen/public_space_value_25"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/public_space_value_10"
                android:paddingBottom="@dimen/public_space_value_10"
                android:gravity="center_vertical"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="@dimen/public_space_value_60"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/big_text_size"
                    android:text="@string/phone_number"
                    android:textColor="@color/text_default"/>
            <EditText
                    android:id="@+id/et_login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/big_text_size"
                    android:hint="@string/please_input_phone_hint"
                    android:layout_marginLeft="@dimen/public_space_value_10"
                    android:textColor="@color/text_default"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:maxLength="20"
                    android:background="@null"/>
        </LinearLayout>

        <include layout="@layout/line_horizontal"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/public_space_value_10"
                android:paddingBottom="@dimen/public_space_value_10"
                android:gravity="center_vertical"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="@dimen/public_space_value_60"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/big_text_size"
                    android:text="@string/password"
                    android:textColor="@color/text_default"/>
            <EditText
                    android:id="@+id/et_login_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/big_text_size"
                    android:textColor="@color/text_default"
                    android:hint="@string/please_input_pw_hint"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:layout_marginLeft="@dimen/public_space_value_10"
                    android:background="@null"/>
        </LinearLayout>

        <include layout="@layout/line_horizontal"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
            <TextView
                    android:id="@+id/tv_register_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/public_space_value_20"
                    android:paddingBottom="@dimen/public_space_value_20"
                    android:paddingRight="@dimen/public_space_value_20"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/register_account"
                    android:textColor="@color/colorBase"/>
            <TextView
                    android:id="@+id/tv_forget_pw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/public_space_value_20"
                    android:paddingBottom="@dimen/public_space_value_20"
                    android:paddingLeft="@dimen/public_space_value_20"
                    android:textSize="@dimen/normal_text_size"
                    android:layout_alignParentRight="true"
                    android:text="@string/forget_pw"
                    android:textColor="@color/colorBase"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/public_space_value_40"
            android:layout_marginLeft="@dimen/public_space_value_20"
            android:layout_marginRight="@dimen/public_space_value_20"
            android:layout_marginTop="@dimen/public_space_value_40"
            android:background="@drawable/bg_bt_bottom"
            android:textSize="@dimen/large_text_size"
            android:text="@string/login"
            android:textColor="@color/white"/>
</LinearLayout>
