<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:paddingLeft="@dimen/public_space_value_18"
              android:paddingRight="@dimen/public_space_value_18"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/public_space_value_20"
            android:paddingBottom="@dimen/public_space_value_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">
        <TextView
                android:layout_width="@dimen/public_space_value_90"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/alipay_account"
                android:textColor="@color/text_default"/>
        <EditText
                android:id="@+id/et_bind_alipay_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text_size"
                android:hint="@string/please_input_alipay_account_hint"
                android:layout_marginLeft="@dimen/public_space_value_10"
                android:textColor="@color/text_default"
                android:singleLine="true"
                android:inputType="text"
                android:maxLength="30"
                android:background="@null"/>
    </LinearLayout>

    <include layout="@layout/line_horizontal"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/public_space_value_20"
            android:paddingBottom="@dimen/public_space_value_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">
        <TextView
                android:layout_width="@dimen/public_space_value_90"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/real_name"
                android:textColor="@color/text_default"/>
        <EditText
                android:id="@+id/et_bind_alipay_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/text_default"
                android:hint="@string/please_input_real_name_hint"
                android:singleLine="true"
                android:inputType="text"
                android:maxLength="16"
                android:layout_marginLeft="@dimen/public_space_value_10"
                android:background="@null"/>
    </LinearLayout>

    <include layout="@layout/line_horizontal"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/public_space_value_20"
            android:textSize="@dimen/small_text_size"
            android:text="@string/bind_alipay_tip"
            android:textColor="@color/colorBase"/>

    <Button
            android:id="@+id/bt_bind_alipay_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/public_space_value_40"
            android:layout_marginTop="@dimen/public_space_value_60"
            android:background="@drawable/bg_bt_bottom"
            android:textSize="@dimen/large_text_size"
            android:text="@string/submit"
            android:textColor="@color/white"/>

</LinearLayout>
