<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:background="@color/white">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <ImageView
                android:layout_marginTop="@dimen/public_space_value_35"
                android:layout_width="@dimen/public_space_value_90"
                android:layout_height="@dimen/public_space_value_90"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_app_2"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/public_space_value_16"
                android:layout_marginBottom="@dimen/public_space_value_16"
                android:text="@string/wf_introduce"
                android:textSize="@dimen/large_text_size"
                android:textColor="@color/text_default"/>

        <TextView
                android:id="@+id/tv_wf_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/public_space_value_40"
                android:layout_marginRight="@dimen/public_space_value_40"
                android:text="@string/jl_introduce_tip"
                android:textSize="@dimen/xnormal_text_size"
                android:textColor="@color/text_default"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/public_space_value_20"
                android:layout_marginLeft="@dimen/public_space_value_40"
                android:layout_marginRight="@dimen/public_space_value_40"
                android:text="@string/wf_introduce_tip"
                android:textSize="@dimen/xnormal_text_size"
                android:textColor="@color/text_default"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginTop="@dimen/public_space_value_5"
                android:layout_marginLeft="@dimen/public_space_value_40"
                android:layout_marginRight="@dimen/public_space_value_50"
                android:layout_marginBottom="@dimen/public_space_value_16"
                android:text="@string/app_sign_tip"
                android:textSize="@dimen/xnormal_text_size"
                android:textColor="@color/text_default"/>

    </LinearLayout>
</ScrollView>

