<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/public_space_value_30"
            android:orientation="vertical">
        <EditText
                android:id="@+id/et_modify_pw_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/public_space_value_15"
                android:paddingBottom="@dimen/public_space_value_15"
                android:textSize="@dimen/big_text_size"
                android:hint="@string/please_input_old_pw_hint"
                android:textColor="@color/text_default"
                android:singleLine="true"
                android:inputType="textPassword"
                android:maxLength="20"
                android:background="@null"/>

        <include layout="@layout/line_horizontal"/>

        <EditText
                android:id="@+id/et_modify_pw_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/public_space_value_15"
                android:paddingBottom="@dimen/public_space_value_15"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/text_default"
                android:hint="@string/please_input_new_pw_hint"
                android:singleLine="true"
                android:inputType="textPassword"
                android:maxLength="20"
                android:background="@null"/>

        <include layout="@layout/line_horizontal"/>

        <EditText
                android:id="@+id/et_modify_pw_new_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/public_space_value_15"
                android:paddingBottom="@dimen/public_space_value_15"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/text_default"
                android:hint="@string/please_input_confirm_new_pw_hint"
                android:singleLine="true"
                android:inputType="textPassword"
                android:maxLength="20"
                android:background="@null"/>

        <include layout="@layout/line_horizontal"/>
    </LinearLayout>

    <Button
            android:id="@+id/bt_confirm_modify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/public_space_value_40"
            android:layout_marginLeft="@dimen/public_space_value_20"
            android:layout_marginRight="@dimen/public_space_value_20"
            android:layout_marginTop="@dimen/public_space_value_40"
            android:background="@drawable/bg_bt_bottom"
            android:textSize="@dimen/large_text_size"
            android:text="@string/confirm_modify"
            android:textColor="@color/white"/>

</LinearLayout>
