<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">
    <include layout="@layout/line_horizontal"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/public_space_value_25"
            android:layout_marginRight="@dimen/public_space_value_25"
            android:layout_marginLeft="@dimen/public_space_value_25"
            android:background="@color/white"
            android:padding="@dimen/public_space_value_15"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_tip"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/text_default"/>

        <EditText
                android:id="@+id/et_red_package_setting_amount"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/public_space_value_10"
                android:layout_marginRight="@dimen/public_space_value_10"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/text_default"
                android:hint="0.00"
                android:singleLine="true"
                android:gravity="right"
                android:inputType="numberDecimal"
                android:maxLength="20"
                android:background="@null"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/text_default"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_red_package_setting_ws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/public_space_value_15"
            android:layout_marginRight="@dimen/public_space_value_25"
            android:layout_marginLeft="@dimen/public_space_value_25"
            android:background="@color/white"
            android:padding="@dimen/public_space_value_15"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/et_red_package_setting_ws"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@color/text_default"
                android:hint="@string/hint_red_package_set_ws"
                android:singleLine="true"
                android:inputType="number"
                android:maxLength="1"
                android:background="@null"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/public_space_value_45"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/public_space_value_5"
                android:text="¥"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/text_default"/>

        <TextView
                android:id="@+id/tv_red_package_setting_amount_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_package_amount_default"
                android:textSize="@dimen/xlarge_text_size"
                android:textColor="@color/text_default"/>
    </LinearLayout>

    <Button
            android:id="@+id/bt_confirm_red_package_setting"
            android:layout_width="@dimen/public_space_value_172"
            android:layout_height="@dimen/public_space_value_46"
            android:layout_marginLeft="@dimen/public_space_value_20"
            android:layout_marginRight="@dimen/public_space_value_20"
            android:layout_marginTop="@dimen/public_space_value_60"
            android:background="@drawable/bg_enable_red_round"
            android:textSize="@dimen/large_text_size"
            android:enabled="false"
            android:text="@string/bt_send_red_package"
            android:textColor="@color/white"/>

</LinearLayout>
